@@ -1,4 +1,19 @@
 <?php
 
 $xpdo_meta_map = array (
+  'xPDOSimpleObject' => 
+  array (
+    0 => 'ModAddress',
+    1 => 'ModCategories',
+    2 => 'ModDelivery',
+    3 => 'ModGallery',
+    4 => 'ModGoods',
+    5 => 'ModLog',
+    6 => 'ModOrderedGoods',
+    7 => 'ModOrders',
+    8 => 'ModPayment',
+    9 => 'ModStatus',
+    10 => 'ModTags',
+    11 => 'ModWarehouse',
+  ),
 );
