@@ -1,2 +1,0 @@
-<?php
-class ModSuggestion extends xPDOSimpleObject {}
